updates to paper

--- a/EF_network_analysis.qmd
+++ b/EF_network_analysis.qmd
@@ -63,7 +63,8 @@ author-note:
     financial-support: "This work was supported by X." 
     conflict-of-interest: "The author has no conflict of interest to declare."
 
-abstract: Executive functions (EFs) are foundational cognitive abilities that develop rapidly during early childhood. Although latent variable approaches have characterized the unity and diversity of EF structure extensively, less is known about the conditional associations among EF components–how these associations change as children develop, and whether they vary across sociocultural contexts. The present study applied Bayesian Gaussian Graphical Models to map age-adjusted EF networks across two longitudinal preschool cohorts from Australia (N = 232; M age = 4.43 years; three waves) and South Africa (N = 217; M age = 4.70 years; two waves). Results suggest moderate and selective coupling among EF components, consistent with partial unity: the inhibition–working memory edge was the most reliable connection across cohorts and waves. Network structure differed between cohorts, with working memory emerging as the most central node in Australia and inhibitory control playing a comparably central role in South Africa — a difference that may reflect the influence of sociocultural and environmental context on EF organization. Despite substantial gains in EF performance across waves, network structure remained stable over time, suggesting a dissociation between the level of executive abilities and the relational architecture organizing them. Exploratory moderation analyses indicated that income-related differences in specific edges emerged at T2 in both cohorts, though these findings require replication in larger samples. Together, these results advance a network perspective on early EF development that complements latent variable approaches, highlighting that the pattern of coupling among EF components — not just children's performance levels — may be sensitive to the environments in which development occurs.
+abstract: |
+Executive functions (EFs) are foundational cognitive abilities that develop rapidly during early childhood. Although latent variable approaches have characterized the unity and diversity of EF structure extensively, less is known about the conditional associations among EF components–how these associations change as children develop, and whether they vary across sociocultural contexts. The present study applied Bayesian Gaussian Graphical Models to map age-adjusted EF networks across two longitudinal preschool cohorts from Australia (N = 232; M age = 4.43 years; three waves) and South Africa (N = 217; M age = 4.70 years; two waves). Results suggest moderate and selective coupling among EF components, consistent with partial unity: the inhibition–working memory edge was the most reliable connection across cohorts and waves. Network structure differed between cohorts, with working memory emerging as the most central node in Australia and inhibitory control playing a comparably central role in South Africa — a difference that may reflect the influence of sociocultural and environmental context on EF organization. Despite substantial gains in EF performance across waves, network structure remained stable over time, suggesting a dissociation between the level of executive abilities and the relational architecture organizing them. Exploratory moderation analyses indicated that income-related differences in specific edges emerged at T2 in both cohorts, though these findings require replication in larger samples. Together, these results advance a network perspective on early EF development that complements latent variable approaches, highlighting that the pattern of coupling among EF components — not just children's performance levels — may be sensitive to the environments in which development occurs.
 
 keywords: ["executive function"] 
 word-count: true
@@ -351,8 +352,6 @@ source(here::here("ef_network_plotting_helper.R"))
 #| label: load-aus-data
 #| include: false
 #| cache: false
-
-file.edit("/Users/foreilly/Documents/GitHub/EF_network/.Renviron")
 
 library(haven)
 aus_data <- read_sav(Sys.getenv("DATA_PATH_1"))
