--- a/EF_network_analysis.tex
+++ b/EF_network_analysis.tex
@@ -149,8 +149,9 @@
 
 
 
-\title{Mapping the Structure of Executive Function in Early Childhood
-using Network Analysis}
+\title{Mapping the Cognitive Architecture of Executive Function in Early
+Childhood: A Cross-Cultural Longitudinal Study Using Bayesian Network
+Analysis}
 
 
 \shorttitle{Mapping Executive Function}
@@ -167,7 +168,7 @@ using Network Analysis}
 
 
 \authorsnames[{1,2},{2},{3},{4},{5},{3},{2},{2}]{Fionnuala
-O'Reilly,Jelena Sucevic,Caylee Cook,Justin E. Karr,Philippe
+O'Reilly,Jelena Sučević,Caylee Cook,Justin E. Karr,Philippe
 Rast,Catherine Draper*,Steven Howard*,Gaia Scerif*}
 
 
@@ -184,17 +185,16 @@ Davis}}
 
 
 
-\leftheader{O'Reilly, Sucevic, Cook, Karr, Rast, Draper*, Howard* and Scerif*}
+\leftheader{O'Reilly, Sučević, Cook, Karr, Rast, Draper*, Howard* and Scerif*}
 
 
 
-\abstract{TO BE ADDED. }
 
 \keywords{executive function}
 
 \authornote{\par{\addORCIDlink{Fionnuala
 O'Reilly}{0000-0002-4355-9088}}\par{\addORCIDlink{Jelena
-Sucevic}{0000-0001-5091-5434}}\par{\addORCIDlink{Caylee
+Sučević}{0000-0001-5091-5434}}\par{\addORCIDlink{Caylee
 Cook}{0000-0001-9718-8887}}\par{\addORCIDlink{Justin E.
 Karr}{0000-0003-3653-332X}}\par{\addORCIDlink{Philippe
 Rast}{0000-0003-3630-6629}}\par{\addORCIDlink{Catherine
