--- a/library.bib
+++ b/library.bib
@@ -887,3 +887,22 @@
   year={2020},
   publisher={Wiley Online Library}
 }
+
+@article{duncan2024brain,
+  title={How the brain creates unity and diversity of executive functions},
+  author={Duncan, John and Friedman, Naomi P},
+  journal={The Frontal Cortex: Organization, Networks, and Function [Internet]},
+  year={2024},
+  publisher={MIT Press}
+}
+
+@article{assem2024basis,
+  title={Basis of executive functions in fine-grained architecture of cortical and subcortical human brain networks},
+  author={Assem, Moataz and Shashidhara, Sneha and Glasser, Matthew F and Duncan, John},
+  journal={Cerebral Cortex},
+  volume={34},
+  number={2},
+  pages={bhad537},
+  year={2024},
+  publisher={Oxford University Press}
+}
